Header Logo Align Fixed.

--- a/src/app/shared/Header/TopBar/index.scss
+++ b/src/app/shared/Header/TopBar/index.scss
@@ -1,8 +1,8 @@
 .top-bar-container{
-    padding: 15px 5vw;
+    padding: 15px 7vw;
 }
 .logo-div{
-    padding: 0px 10px;
+    padding: 0px 0px;
     height: 66px;
     .korean-shop-logo{
         height: 100%;
